{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 279,
  "lineage": "338d067a-2b2f-1ed2-d970-fd1dde6f5469",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "florida-instace",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f7a72f74cc6ead3",
            "arn": "arn:aws:ec2:us-east-2:484430028045:instance/i-0228ff349c6d22730",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0228ff349c6d22730",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "florida-10th-july",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07bdb985b2a03cf14",
            "private_dns": "ip-10-0-0-118.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.118",
            "public_ip": "3.144.228.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d70b3655f363056",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d539217f984705ca",
            "tags": {
              "Name": "Florida-Instance"
            },
            "tags_all": {
              "Name": "Florida-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082fc91105b3e3432"
            ]
          },
          "dependencies": [
            "aws_key_pair.florida-key-pair",
            "aws_security_group.florida_SG_allow_ssh_http",
            "aws_subnet.florida-subnet-2a",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "florida-instace-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f7a72f74cc6ead3",
            "arn": "arn:aws:ec2:us-east-2:484430028045:instance/i-0469b424f891aa086",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0469b424f891aa086",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "florida-10th-july",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00f27a3729d655ccb",
            "private_dns": "ip-10-0-0-194.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.194",
            "public_ip": "3.14.250.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090493e8124e50363",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d539217f984705ca",
            "tags": {
              "Name": "Florida-Instance-2"
            },
            "tags_all": {
              "Name": "Florida-Instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082fc91105b3e3432"
            ]
          },
          "dependencies": [
            "aws_key_pair.florida-key-pair",
            "aws_security_group.florida_SG_allow_ssh_http",
            "aws_subnet.florida-subnet-2a",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "florida_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:484430028045:internet-gateway/igw-0d9585d69bfa76c1d",
            "id": "igw-0d9585d69bfa76c1d",
            "owner_id": "484430028045",
            "tags": {
              "Name": "Florida-IG"
            },
            "tags_all": {
              "Name": "Florida-IG"
            },
            "vpc_id": "vpc-04984627e78e7f19a"
          },
          "dependencies": [
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "florida-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:loadbalancer/app/card-website-app-LB/bf86247ae4aaddef",
            "arn_suffix": "app/card-website-app-LB/bf86247ae4aaddef",
            "desync_mitigation_mode": "defensive",
            "dns_name": "card-website-app-LB-782653238.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:484430028045:loadbalancer/app/card-website-app-LB/bf86247ae4aaddef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "card-website-app-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-082fc91105b3e3432"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f257eda3323b488"
              },
              {
                "subnet_id": "subnet-0d539217f984705ca"
              }
            ],
            "subnets": [
              "subnet-05f257eda3323b488",
              "subnet-0d539217f984705ca"
            ],
            "tags": {
              "Environment": "prod"
            },
            "tags_all": {
              "Environment": "prod"
            },
            "vpc_id": "vpc-04984627e78e7f19a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.florida_SG_allow_ssh_http",
            "aws_subnet.florida-subnet-2a",
            "aws_subnet.florida-subnet-2b",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "florida-LB-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:loadbalancer/app/florida-LB-1/11fdf12b5b60d67b",
            "arn_suffix": "app/florida-LB-1/11fdf12b5b60d67b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "florida-LB-1-824516612.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:484430028045:loadbalancer/app/florida-LB-1/11fdf12b5b60d67b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "florida-LB-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-082fc91105b3e3432"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f257eda3323b488"
              },
              {
                "subnet_id": "subnet-0d539217f984705ca"
              }
            ],
            "subnets": [
              "subnet-05f257eda3323b488",
              "subnet-0d539217f984705ca"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-04984627e78e7f19a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.florida_SG_allow_ssh_http",
            "aws_subnet.florida-subnet-2a",
            "aws_subnet.florida-subnet-2b",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "florida-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:listener/app/card-website-app-LB/bf86247ae4aaddef/c1c9f6583ca95d65",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/card-website-app/6be93e8347d5b35e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:484430028045:listener/app/card-website-app-LB/bf86247ae4aaddef/c1c9f6583ca95d65",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:loadbalancer/app/card-website-app-LB/bf86247ae4aaddef",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.florida-LB",
            "aws_lb_target_group.florida-TG",
            "aws_security_group.florida_SG_allow_ssh_http",
            "aws_subnet.florida-subnet-2a",
            "aws_subnet.florida-subnet-2b",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "florida-listener-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:listener/app/florida-LB-1/11fdf12b5b60d67b/67d873ea83f2f705",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/florida-TG-1/77fa06491f612b99",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:484430028045:listener/app/florida-LB-1/11fdf12b5b60d67b/67d873ea83f2f705",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:loadbalancer/app/florida-LB-1/11fdf12b5b60d67b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.florida-LB-1",
            "aws_lb_target_group.florida-TG-1",
            "aws_security_group.florida_SG_allow_ssh_http",
            "aws_subnet.florida-subnet-2a",
            "aws_subnet.florida-subnet-2b",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "florida-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/card-website-app/6be93e8347d5b35e",
            "arn_suffix": "targetgroup/card-website-app/6be93e8347d5b35e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/card-website-app/6be93e8347d5b35e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "card-website-app",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04984627e78e7f19a"
          },
          "dependencies": [
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "florida-TG-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/florida-TG-1/77fa06491f612b99",
            "arn_suffix": "targetgroup/florida-TG-1/77fa06491f612b99",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/florida-TG-1/77fa06491f612b99",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "florida-TG-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04984627e78e7f19a"
          },
          "dependencies": [
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "florida-TG-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/card-website-app/6be93e8347d5b35e-20230808034820298000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/card-website-app/6be93e8347d5b35e",
            "target_id": "i-0228ff349c6d22730"
          },
          "dependencies": [
            "aws_instance.florida-instace",
            "aws_key_pair.florida-key-pair",
            "aws_lb_target_group.florida-TG",
            "aws_security_group.florida_SG_allow_ssh_http",
            "aws_subnet.florida-subnet-2a",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "florida-TG-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/card-website-app/6be93e8347d5b35e-20230808034820365400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:484430028045:targetgroup/card-website-app/6be93e8347d5b35e",
            "target_id": "i-0469b424f891aa086"
          },
          "dependencies": [
            "aws_instance.florida-instace-2",
            "aws_key_pair.florida-key-pair",
            "aws_lb_target_group.florida-TG",
            "aws_security_group.florida_SG_allow_ssh_http",
            "aws_subnet.florida-subnet-2a",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "florida-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:484430028045:route-table/rtb-0ddc4639ff1998fc9",
            "id": "rtb-0ddc4639ff1998fc9",
            "owner_id": "484430028045",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9585d69bfa76c1d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Florida-RT"
            },
            "tags_all": {
              "Name": "Florida-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04984627e78e7f19a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.florida_IG",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "florida-RT-association-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fee57215e22d8e6",
            "route_table_id": "rtb-0ddc4639ff1998fc9",
            "subnet_id": "subnet-0d539217f984705ca"
          },
          "dependencies": [
            "aws_internet_gateway.florida_IG",
            "aws_route_table.florida-RT",
            "aws_subnet.florida-subnet-2a",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "florida-RT-association-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fe805edf213130b",
            "route_table_id": "rtb-0ddc4639ff1998fc9",
            "subnet_id": "subnet-05f257eda3323b488"
          },
          "dependencies": [
            "aws_internet_gateway.florida_IG",
            "aws_route_table.florida-RT",
            "aws_subnet.florida-subnet-2b",
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "florida_SG_allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:484430028045:security-group/sg-082fc91105b3e3432",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082fc91105b3e3432",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "484430028045",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-04984627e78e7f19a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "florida-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:484430028045:subnet/subnet-0d539217f984705ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d539217f984705ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484430028045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Florida-subnet-2a"
            },
            "tags_all": {
              "Name": "Florida-subnet-2a"
            },
            "vpc_id": "vpc-04984627e78e7f19a"
          },
          "dependencies": [
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "florida-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:484430028045:subnet/subnet-05f257eda3323b488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f257eda3323b488",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484430028045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Florida-subnet-2b"
            },
            "tags_all": {
              "Name": "Florida-subnet-2b"
            },
            "vpc_id": "vpc-04984627e78e7f19a"
          },
          "dependencies": [
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "florida-subnet-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:484430028045:subnet/subnet-0c8c35037e01d1e2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8c35037e01d1e2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484430028045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Florida-subnet-2c"
            },
            "tags_all": {
              "Name": "Florida-subnet-2c"
            },
            "vpc_id": "vpc-04984627e78e7f19a"
          },
          "dependencies": [
            "aws_vpc.florida-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "florida-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:484430028045:vpc/vpc-04984627e78e7f19a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e09ebfbb17778564",
            "default_route_table_id": "rtb-020197bab9225d3d8",
            "default_security_group_id": "sg-0d850e64f9af48f51",
            "dhcp_options_id": "dopt-0db2783fe0dc3fe6d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04984627e78e7f19a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020197bab9225d3d8",
            "owner_id": "484430028045",
            "tags": {
              "Name": "Florida-vpc"
            },
            "tags_all": {
              "Name": "Florida-vpc"
            }
          }
        }
      ]
    }
  ]
}